hphp/test/zend/good/ext/intl/tests/timezone_getDisplayName_variant2-49+.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('intl')) die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '49') < 0) die('skip for ICU 49+');
if (version_compare(INTL_ICU_VERSION, '51.2') >=  0) die('skip for ICU < 51.2');
}
